Remove login button for now.

--- a/app/components/user-menu/user-menu.html
+++ b/app/components/user-menu/user-menu.html
@@ -74,7 +74,7 @@
             <span translate>Help</span>
           </a>
         </li>
-        <li ng-if="!user.authenticated">
+        <!--li ng-if="!user.authenticated">
           <a ng-click="logIn()"
              href="/accounts/login/"
              title="<% tooltips.login %>"
@@ -84,7 +84,7 @@
               <span translate>Log in</span>
             </div>
           </a>
-        </li>
+        </li-->
         <li class="dropdown" ng-if="user.authenticated">
           <a title="<% tooltips.profile %>"
              class="dropdown-toggle"
