Display hard-coded version number in about modal.

--- a/app/components/user-menu/user-menu.html
+++ b/app/components/user-menu/user-menu.html
@@ -154,7 +154,7 @@
       <ng-include src="'/about/'"></ng-include>
     </div>
     <div class="modal-footer">
-      <span class="pull-left text-muted">Version: <% about.version.full %></span>
+      <span class="pull-left text-muted">Version: v4.6.5</span>
       <button class="btn btn-default" type="button" ng-click="$dismiss()">
         Close
       </button>
